apply plugin: 'java-library'

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    testImplementation 'junit:junit:4.12'
    implementation 'org.apache.commons:commons-compress:1.19'
}

sourceCompatibility = "8"
targetCompatibility = "8"

ext {
    sdkAarName = "${SDK_AAR_NAME}"
    sdkJarName = "${SDK_JAR_NAME}"
    sdkDexName = "${SDK_DEX_NAME}"
    sdkFolder = "${SDK_FOLDER}"
    shellAarName = "${SHELL_NAME}"
    stubSrcDir = "${SDK_STUB_SRC_FOLDER}"
    dex2jarDir = "${DEX2JAR_TOOL_FOLDER}"
}

jar {
    //项目名，也是生成的jar的名字
    baseName = "libsag"
    //项目版本号，这部分内容会写进manifest
    version = "1.0"
    //项目的manifest定义，其中就包含最关键的入口类定义
    manifest { attributes 'Main-Class': 'com.lxzh123.libsag.Main' }

    tasks.withType(JavaCompile) {
        options.compilerArgs << "-Xlint:unchecked"
    }
}

task copyJar(type: Copy) {
    from configurations.runtime
    into('build/libs/lib')
}

def String pathJoin(String path1, String path2) {
    def a = path1.endsWith(File.separator)
    def b = path2.startsWith(File.separator)
    if (a && b) {
        return path1 + path2.substring(1)
    } else if (a != b) {
        return path1 + path2
    } else {
        return path1 + File.separator + path2
    }
}

def unzip(String jar, String libs, String zipFile, String outPath) {
    def cmd = "java -jar -Djava.ext.dirs=" + libs + " " + jar + " unzip " + zipFile + " " + outPath
    println("command:" + cmd)
    println(cmd.execute().text.trim())
}

def parsePkgName(String jar, String sdkManifestName, String stubManifestName) {
    def cmd = "java -jar " + jar + " pkgname " + sdkManifestName + " " + stubManifestName
    println("command:" + cmd)
    def output = cmd.execute().text.trim()
    println(output)
    def pkgName = ""
    if (output.contains("pkgName")) {
        pkgName = output.substring(output.indexOf(":") + 1)
    }
    return pkgName
}

def jar2dex(String d2jPath, String jarFile, String dexFile) {
    def dex = new File(dexFile)
    if (dex.exists()) {
        dex.delete()
    }
    def cmd = d2jPath + " " + jarFile + " -o " + dexFile + " --force"
    println("command:" + cmd)
    cmd.execute()
}

def copyFile(String fromFileName, String intoDir, String fileName) {
    def fromFile = new File(fromFileName)
    if (!fromFile.exists()) {
        println("copyFile error: fromFile:" + fromFile.getAbsolutePath() + " is not exists")
        return
    }
    def intoFileName = intoDir + fileName
    def intoFile = new File(intoFileName)
    if (intoFile.exists()) {
        intoFile.delete()
    }
    println("fromFile=" + fromFileName)
    println("intoDir=" + intoDir)
    println("fileName=" + fileName)
    println("before copy, file=" + intoFile.getAbsolutePath() + ", exists=" + intoFile.exists())
    copy {
        from fromFile
        into intoDir
        rename {
            fileName
        }
    }
    println(" after copy, file=" + intoFile.getAbsolutePath() + ", exists=" + intoFile.exists() + ", size=" + intoFile.length())
}

def copyPath(String srcPath, String dstPath) {
    println("srcPath:" + srcPath)
    println("dstPath:" + dstPath)
    def srcFile = new File(srcPath)
    for (File file : srcFile.listFiles()) {
        def name = file.getName()
        def dstName = pathJoin(dstPath, name)
        println("file:" + file.getAbsolutePath() + ",name=" + name)
        println("dstName:" + dstName)
        if (file.isFile()) {
            copy {
                from file.getAbsolutePath()
                into dstPath
                rename {
                    name
                }
            }
        } else {
            def newPath = new File(dstName)
            if (!newPath.exists()) {
                newPath.mkdirs()
            }
            copyPath(file.getAbsolutePath(), dstName)
        }
    }
}

def delPath(String path) {
    def dir = new File(path)
    def files = dir.listFiles()
    for (File file : files) {
        if (file.isFile()) {
            file.delete()
        } else {
            delPath(file.getAbsolutePath())
            file.delete()
        }
    }
}

def getFileCount(String path) {
    def file = new File(path)
    def files = file.listFiles()
    def total = 0
    if (files != null) {
        def len = files.length
        for (int i = 0; i < len; i++) {
            if (files[i].directory) {
                total += getFileCount(files[i].absolutePath)
            } else {
                total++
            }
        }
    }
    return total
}

build {
    def taskName = getProject().getName() + " " + getName()
    doLast {
        println("=====================" + taskName + " doLast start.=======================")
        println("step 1: copy jar file to sdk directory=======================")
        //copy jar file to sdk directory
        def rootDir = getRootDir().getAbsolutePath()
        def buildDir = getBuildDir().getAbsolutePath()
        def sdkDir = rootDir + File.separator + sdkFolder + File.separator
        def fileName = jar.baseName + "-" + jar.version + ".jar"
        def fromFile = buildDir + File.separator + "libs" + File.separator + fileName
        def jarName = "libsag.jar"
        copyFile(fromFile, sdkDir, jarName)
        def jarFile = sdkDir + jarName

        def libDir = sdkDir + "libs"
        println("step 2: unzip sdk aar=======================")
        //unzip sdk aar
        def sdkFile = sdkDir + sdkAarName
        def sdkUnzipPath = sdkDir + "sdk" + File.separator
        delPath(sdkUnzipPath)
        unzip(jarFile, libDir, sdkFile, sdkUnzipPath)
        sleep(1000)
        println("step 3: unzip shell aar=======================")
        //unzip sdk aar
        def shellFile = sdkDir + shellAarName
        def shellUnzipPath = sdkDir + "shell" + File.separator
        delPath(shellUnzipPath)
        unzip(jarFile, libDir, shellFile, shellUnzipPath)
        sleep(1000)

        println("step 4: merge sdk so to shell=======================")
        def sdkJni = sdkUnzipPath + "jni"
        def shellJni = shellUnzipPath + "jni"
        copyPath(sdkJni, shellJni)

        println("step 5: copy sdk jar to sdk directory=======================")
        //copy jar in aar to sdk directory
        def jarInAar = sdkUnzipPath + "classes.jar"
        copyFile(jarInAar, sdkDir, sdkJarName)
        def dexJarFile = sdkDir + sdkJarName

        println("step 6: parse sdk package name and update to stub=======================")
        def sdkManifestName = sdkUnzipPath + "AndroidManifest.xml"
        def stubManifestName = stubSrcDir + "AndroidManifest.xml"
        def pkgName = parsePkgName(jarFile, sdkManifestName, stubManifestName)
        println("pkgName=" + pkgName)

        println("step 7: transform sdk jar to dex=======================")
        //transform sdk jar to dex
        def dex2jarFile = dex2jarDir + "d2j-jar2dex.bat"
        def dexFile = sdkDir + sdkDexName
        jar2dex(dex2jarFile, dexJarFile, dexFile)
        println("dexFile=" + dexFile + ", exists=" + (new File(dexFile).exists()))

        println("step 8: generate stub sdk=======================")
        //exec command to generate source code of stub sdk
        def outFolder = stubSrcDir + "java" + File.separator
        println("jarFile=" + jarFile + ", exists=" + (new File(jarFile).exists()))
        println("dexJarFile=" + dexJarFile)
        println("outFolder=" + outFolder)
        def command = "java -jar -Xverify:none " + jarFile + " sag " + dexJarFile + " " + outFolder + " " + libDir
        println("command:" + command)
//        command.execute()
        println(command.execute().text.trim())
        def fileCnt = getFileCount(outFolder)
        println("java file count:" + fileCnt)
        sleep(5000)
        println("=====================" + taskName + " doLast end.=========================")
    }
}
